<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.login.SignInFragment">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/ic_bg_1"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subTitle"
        android:contentDescription="@string/app_name" />
    <View
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/ic_wave_sign"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title_size"
        android:layout_marginTop="@dimen/margin_top_large"
        android:layout_marginBottom="@dimen/margin"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:textStyle="bold"
        android:text="@string/welcome_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/subTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_to_continue"
        android:textSize="@dimen/sub_title_size"
        android:textStyle="bold"
        android:layout_margin="@dimen/margin"
        app:layout_constraintStart_toStartOf="@id/title"
        app:layout_constraintEnd_toEndOf="@id/title"
        app:layout_constraintTop_toBottomOf="@id/title"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_large"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxCornerRadiusBottomEnd="@dimen/box_radius"
        app:boxCornerRadiusBottomStart="@dimen/box_radius"
        app:boxCornerRadiusTopEnd="@dimen/box_radius"
        app:boxCornerRadiusTopStart="@dimen/box_radius"
        app:layout_constraintStart_toStartOf="@id/subTitle"
        app:layout_constraintEnd_toEndOf="@id/subTitle"
        app:layout_constraintTop_toBottomOf="@id/subTitle"
        android:hint="@string/email_id"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="@id/emailLayout"
        app:layout_constraintEnd_toEndOf="@id/emailLayout"
        app:layout_constraintTop_toBottomOf="@id/emailLayout"
        android:layout_margin="@dimen/margin"
        android:hint="@string/password"
        app:boxCornerRadiusBottomEnd="@dimen/box_radius"
        app:boxCornerRadiusBottomStart="@dimen/box_radius"
        app:boxCornerRadiusTopEnd="@dimen/box_radius"
        app:boxCornerRadiusTopStart="@dimen/box_radius"
        app:passwordToggleEnabled="true"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/passwordLayout"
        android:text="@string/forgot_password"
        app:layout_constraintTop_toBottomOf="@id/passwordLayout"
        android:textStyle="bold"
        android:textSize="@dimen/text_size"
        android:layout_marginTop="@dimen/margin_top"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_large"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:text="@string/proceed"
        app:backgroundTint="@color/purple_200"
        android:textAllCaps="false"
        android:background="@drawable/rectangular_button"
        app:layout_constraintStart_toStartOf="@id/passwordLayout"
        app:layout_constraintEnd_toEndOf="@id/passwordLayout"
        app:layout_constraintTop_toBottomOf="@id/forgotPassword"
        />
    <ImageButton
        android:id="@+id/googleSocialAuth"
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size"
        android:src="@drawable/ic_google"
        android:elevation="@dimen/button_elevation"
        android:background="@drawable/circle_button"
        android:layout_marginEnd="@dimen/margin_top"
        app:layout_constraintTop_toTopOf="@id/twitterSocialAuth"
        app:layout_constraintBottom_toBottomOf="@id/twitterSocialAuth"
        app:layout_constraintEnd_toStartOf="@id/twitterSocialAuth"
        android:contentDescription="@string/google_signin" />
    <ImageButton
        android:background="@drawable/circle_button"
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/twitterSocialAuth"
        android:src="@drawable/ic_twitter"
        android:elevation="@dimen/button_elevation"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        app:layout_constraintTop_toBottomOf="@id/loginButton"
        android:contentDescription="@string/twitter_signin"
        />
    <ImageButton
        android:id="@+id/facebookSocialAuth"
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size"
        android:background="@drawable/circle_button"
        android:src="@drawable/ic_facebook"
        android:elevation="@dimen/button_elevation"
        app:layout_constraintTop_toTopOf="@id/twitterSocialAuth"
        app:layout_constraintBottom_toBottomOf="@id/twitterSocialAuth"
        app:layout_constraintStart_toEndOf="@id/twitterSocialAuth"
        android:contentDescription="@string/facebook_sign_in"
        android:layout_marginStart="@dimen/margin_top"
        />
    <TextView
        android:id="@+id/navToSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_member"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_top"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toStartOf="@id/loginButton"
        app:layout_constraintEnd_toEndOf="@id/loginButton"
        app:layout_constraintTop_toBottomOf="@id/twitterSocialAuth"
        />
</androidx.constraintlayout.widget.ConstraintLayout>