<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.register.SignUpFragment">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/ic_bg_1"
        android:scaleType="fitXY"
        app:layout_constraintTop_toBottomOf="@id/subTitle"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@drawable/ic_wave"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title_size"
        android:layout_marginTop="@dimen/margin_top_large"
        android:layout_marginBottom="@dimen/margin"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:textStyle="bold"
        android:text="@string/create_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/subTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_to_get_started"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="@dimen/margin"
        app:layout_constraintStart_toStartOf="@id/title"
        app:layout_constraintEnd_toEndOf="@id/title"
        app:layout_constraintTop_toBottomOf="@id/title"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_large"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="@id/subTitle"
        app:layout_constraintEnd_toEndOf="@id/subTitle"
        app:layout_constraintTop_toBottomOf="@id/subTitle"
        android:hint="@string/full_name"
        app:boxCornerRadiusBottomEnd="@dimen/box_radius"
        app:boxCornerRadiusBottomStart="@dimen/box_radius"
        app:boxCornerRadiusTopEnd="@dimen/box_radius"
        app:boxCornerRadiusTopStart="@dimen/box_radius"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text|textCapWords"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="@id/nameLayout"
        app:layout_constraintEnd_toEndOf="@id/nameLayout"
        app:layout_constraintTop_toBottomOf="@id/nameLayout"
        android:hint="@string/email_id"
        app:boxCornerRadiusBottomEnd="@dimen/box_radius"
        app:boxCornerRadiusBottomStart="@dimen/box_radius"
        app:boxCornerRadiusTopEnd="@dimen/box_radius"
        app:boxCornerRadiusTopStart="@dimen/box_radius"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="@id/emailLayout"
        app:layout_constraintEnd_toEndOf="@id/emailLayout"
        app:layout_constraintTop_toBottomOf="@id/emailLayout"
        android:layout_margin="@dimen/margin"
        android:hint="@string/password"
        app:passwordToggleEnabled="true"
        app:boxCornerRadiusBottomEnd="@dimen/box_radius"
        app:boxCornerRadiusBottomStart="@dimen/box_radius"
        app:boxCornerRadiusTopEnd="@dimen/box_radius"
        app:boxCornerRadiusTopStart="@dimen/box_radius"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cPasswordLayout"
        android:layout_margin="@dimen/margin"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="@id/passwordLayout"
        app:layout_constraintEnd_toEndOf="@id/passwordLayout"
        app:layout_constraintTop_toBottomOf="@id/passwordLayout"
        android:hint="@string/re_enter_password"
        app:passwordToggleEnabled="true"
        app:boxCornerRadiusBottomEnd="@dimen/box_radius"
        app:boxCornerRadiusBottomStart="@dimen/box_radius"
        app:boxCornerRadiusTopEnd="@dimen/box_radius"
        app:boxCornerRadiusTopStart="@dimen/box_radius">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/cPasswordLayout"
        app:layout_constraintEnd_toEndOf="@id/cPasswordLayout"
        app:layout_constraintTop_toBottomOf="@id/cPasswordLayout"
        android:layout_marginTop="@dimen/margin_top_large"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        app:backgroundTint="@color/purple_200"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:background="@drawable/rectangular_button"
        />
    <TextView
        android:id="@+id/navToSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/registerButton"
        app:layout_constraintEnd_toEndOf="@id/registerButton"
        android:text="@string/registered"
        android:layout_marginTop="@dimen/margin_top"
        app:layout_constraintTop_toBottomOf="@id/registerButton"
        />
</androidx.constraintlayout.widget.ConstraintLayout>